# networkMusicChanger

./: CMakeLists.txt
src/: enums.hpp
src/client/: docopt.c  main.cpp  usage.txt
src/server/: docopt.c  main.cpp  main.hpp  usage.txt
